# Astera

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: extract-contract-id.sh
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/benches/: contract_benchmarks.rs
benchmarks/src/: lib.rs
contracts/.cargo/: audit.toml
contracts/credit_score/src/: lib.rs
contracts/invoice/src/: lib.rs
contracts/pool/src/: lib.rs
contracts/share/src/: lib.rs
contracts/tests/: Cargo.toml
contracts/tests/tests/: integration_tests.rs
docs/: ARCHITECTURE.md  events.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/__tests__/components/: InvoiceCard.test.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ExplorerLink.tsx  InvoiceCard.tsx
frontend/hooks/: useDashboardViewMode.ts
