[package]
name = "contract-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "contract_benchmarks"
harness = false

[dependencies]
criterion = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[dependencies.invoice]
path = "../contracts/invoice"

[dependencies.pool]
path = "../contracts/pool"
